# simple-cpp-lib

./: CMakeLists.txt  Justfile  LICENSE  foo.hpp  main.cpp  vcpkg.json
cmake/: config.cmake.in
src/: foo.cpp
